--- a/mt/launch/config.yaml
+++ b/mt/launch/config.yaml
@@ -1,26 +1,30 @@
-camera_color_width: 1280
-camera_color_height: 720
-camera_depth_width: 1280
-camera_depth_height: 720
+#camera_color_width: 1280
+#camera_color_height: 720
+#camera_depth_width: 1280
+#camera_depth_height: 720
+#camera_color_fps: 30
+#camera_depth_fps: 30
 
-aruco_marker_length: 0.578
+#aruco_marker_length: 0.0576
 
-path_to_obj_stl: 'mluser/...'
-path_to_store: 'mluser/...'
+path_to_obj_stl: '/home/mluser/catkin_ws/src/mt/cad/product.stl'
+# path_to_obj_stl: '/home/johannes/catkin_ws/src/mt/cad/product.stl'
+path_to_store: '/home/mluser/catkin_ws/src/data/'
+#path_to_store: '/home/johannes/catkin_ws/src/data/'
 
-print_debug = true
+print_debug: true
 
 PoseRandomization:
-  phiInc: !degrees 15
-  thetaInc: !degrees 15
+  phiInc: -10
+  thetaInc: 15
   numHorizontal: 15
-  thetaMax: !degrees 75
-  rRmin: 
-  rRmax:
+  thetaMax: 75
+  rRmin: -0.1
+  rRmax: 0.1
   numRandomGoals: 3
-  rotate4Min:
-  rotate4Max:
-  rotate5Min:
-  rotate5Max:
-  rotate6Min:
-  rotate6Max:
+  rotate4Min: 2
+  rotate4Max: 10
+  rotate5Min: 2
+  rotate5Max: 10
+  rotate6Min: 5
+  rotate6Max: 65
