--- a/mt/launch/config.yaml
+++ b/mt/launch/config.yaml
@@ -7,9 +7,14 @@
 
 #aruco_marker_length: 0.0576
 
+camera_width: 1280
+camera_height: 720
+outputImage_size: 400
+object_name: 'carrier_empty'
+
 path_to_obj_stl: '/home/mluser/catkin_ws/src/mt/cad/product.stl'
 # path_to_obj_stl: '/home/johannes/catkin_ws/src/mt/cad/product.stl'
-path_to_store: '/home/mluser/catkin_ws/src/data/'
+path_to_store: '/home/mluser/catkin_ws/src/data/single/carrier_empty'
 #path_to_store: '/home/johannes/catkin_ws/src/data/'
 
 print_debug: false
