--- a/dope/config/config_pose_test.yaml
+++ b/dope/config/config_pose_test.yaml
@@ -1,4 +1,4 @@
-path_to_images: "/home/mluser/Schreibtisch/data/test_synth/auszug"
+path_to_images: "/home/mluser/Schreibtisch/data/test_real_sub/subsub"
 
 # Comment any of these lines to prevent detection / pose estimation of that object
 weights: {
@@ -8,7 +8,10 @@ weights: {
     # "mustard":"mustard_60.pth", 
     #"soup":"soup_60.pth",
     #"sugar":"sugar_60.pth"
-    "carrier_empty":"net_synthOnly_epoch_107.pth"
+    
+    #"carrier_empty":"0_net_synthOnly_107.pth"
+    #"carrier_empty":"1_net_synth107+real120.pth"
+    "carrier_empty":"2_net_pretrained+real_120.pth"
 }
 
 # Cuboid dimension in cm x,y,z
