--- a/dope/config/config_pose.yaml
+++ b/dope/config/config_pose.yaml
@@ -1,15 +1,16 @@
-topic_camera: "/dope/webcam_rgb_raw"
+topic_camera: "/dope/camera_images"
 topic_publishing: "dope"
-frame_id: "/dope"
+frame_id: "/camera_color_optical_frame"
 
 # Comment any of these lines to prevent detection / pose estimation of that object
 weights: {
-    # "cracker":"cracker_60.pth", 
+    # "cracker":"cracker_60.pth",
     # "gelatin":"gelatin_60.pth",
-    # "meat":"meat_20.pth", 
-    # "mustard":"mustard_60.pth", 
-    "soup":"soup_60.pth", 
+    # "meat":"meat_20.pth",
+    # "mustard":"mustard_60.pth",
+    #"soup":"soup_60.pth",
     #"sugar":"sugar_60.pth"
+    "carrier_empty":"4_net_real_8874.pth"
 }
 
 # Cuboid dimension in cm x,y,z
@@ -20,6 +21,7 @@ dimensions: {
     "mustard": [9.6024150848388672,19.130100250244141,5.824894905090332],
     "soup": [6.7659378051757813,10.185500144958496,6.771425724029541],
     "sugar": [9.267730712890625,17.625339508056641,4.5134143829345703],
+    "carrier_empty": [19.8,9.0,17.7],
 }
 
 draw_colors: {
@@ -29,17 +31,18 @@ draw_colors: {
     "mustard": [217,12, 232],  # magenta
     "soup": [255, 101, 0],  # orange
     "sugar": [232, 222, 12],  # yellow
+    "carrier_empty": [0, 104, 255],  # blue
 }
 
-# Camera intrinsics (Logitech C920)
-camera_settings: {
-    "name": "logitech_c920",
-    "width": 640,
-    "height": 480,
-    "fx": 641.5,
-    "fy": 641.5,
-    "cx": 320.0,
-    "cy": 240.0
+# Camera intrinsics
+camera_settings: {      # TODO Edit to fit real camera!
+    "name": "Realsense",
+    "width": 400,
+    "height": 400,
+    "fx": 513.95,
+    "fy": 514.1,
+    "cx": 203.57,
+    "cy": 198.37
 }
 
 # Config params for DOPE
