--- a/dope/config/config_pose.yaml
+++ b/dope/config/config_pose.yaml
@@ -1,4 +1,4 @@
-topic_camera: "/dope/camera_images"
+topic_camera: "/dope/camera_images" #"camera/color/image_raw" 
 topic_publishing: "dope"
 frame_id: "/camera_color_optical_frame"
 
@@ -10,7 +10,9 @@ weights: {
     # "mustard":"mustard_60.pth",
     #"soup":"soup_60.pth",
     #"sugar":"sugar_60.pth"
-    "carrier_empty":"4_net_real_8874.pth"
+    #"carrier_empty":"2_net_pretrained+real_14789_120.pth"
+    "carrier_empty":"6_net_pretrained+real_2958_120.pth"
+    #"carrier_empty":"4_net_real_8874.pth"
 }
 
 # Cuboid dimension in cm x,y,z
@@ -35,8 +37,31 @@ draw_colors: {
 }
 
 # Camera intrinsics
-camera_settings: {      # TODO Edit to fit real camera!
-    "name": "Realsense",
+#camera_settings: {
+#    "name": "Realsense",
+#    "width": 1280,
+#    "height": 720,
+#    "fx": 925.11,
+#    "fy": 925.38,
+#    "cx": 647.23,
+#    "cy": 357.07
+#}
+
+# Camera intrinsics
+#camera_settings: {
+#    "name": "Realsense",
+#    "width": 640,
+#    "height": 480,
+#    "fx": 616.74,
+#    "fy": 616.92,
+#    "cx": 324.82,
+#    "cy": 238.05
+#}
+
+
+# Camera intrinsics
+camera_settings: {
+    "name": "Testimage-Camera",
     "width": 400,
     "height": 400,
     "fx": 513.95,
