Optimization for capturing different objects

--- a/mt/launch/config.yaml
+++ b/mt/launch/config.yaml
@@ -34,3 +34,18 @@ PoseRandomization:
   rotate5Max: 6
   rotate6Min: 5
   rotate6Max: 65
+
+carrier_empty:
+  transformTo:
+    object_img_center: [0, 0, 0.05, 0, 0, 0] # x, y, z, rx, ry, rz [deg] for rxyz
+    object: [0, 0, -0.0075, 0, 0, 0]
+    object_origin: [0, 0, -0.0075, -90, 0, -180]
+    c_0: [-0.1185, -0.099, 0,    0, 0, 0]
+    c_1: [-0.1185,  0.099, 0,    0, 0, 0]
+    c_2: [-0.1185,  0.099, 0.09, 0, 0, 0]
+    c_3: [-0.1185, -0.099, 0.09, 0, 0, 0]
+    c_4: [ 0.0585, -0.099, 0,    0, 0, 0]
+    c_5: [ 0.0585,  0.099, 0,    0, 0, 0]
+    c_6: [ 0.0585,  0.099, 0.09, 0, 0, 0]
+    c_7: [ 0.0585, -0.099, 0.09, 0, 0, 0]
+    c_8: [-0.03, 0, 0.045, 0, 0, 0]
