--- a/mt/launch/config.yaml
+++ b/mt/launch/config.yaml
@@ -37,7 +37,7 @@ PoseRandomization:
 
 carrier_empty:
   transformTo:
-    object_img_center: [0, 0, 0.05, 0, 0, 0] # x, y, z, rx, ry, rz [deg] for rxyz
+    object_img_center: [0, 0, 0.05, 0, 0, 0] # from marker - x, y, z, rx, ry, rz [deg] for rxyz
     object: [0, 0, -0.0075, 0, 0, 0]
     object_origin: [0, 0, -0.0075, -90, 0, -180]
     c_0: [-0.1185, -0.099, 0,    0, 0, 0]
@@ -49,3 +49,18 @@ carrier_empty:
     c_6: [ 0.0585,  0.099, 0.09, 0, 0, 0]
     c_7: [ 0.0585, -0.099, 0.09, 0, 0, 0]
     c_8: [-0.03, 0, 0.045, 0, 0, 0]
+
+holder_empty:
+  transformTo:
+    object_img_center: [0.05106, -0.03775, 0, 0, 0, 0] # from marker - x, y, z, rx, ry, rz [deg] for rxyz
+    object: [-0.01215, -0.0375, -0.038, 0, 0, 0]
+    object_origin: [-0.01215, -0.0375, -0.038, -90, 0, -180]
+    c_0: [-0.01685, -0.099, 0,    0, 0, 0]
+    c_1: [-0.01685,  0.099, 0,    0, 0, 0]
+    c_2: [-0.01685,  0.099, 0.06, 0, 0, 0]
+    c_3: [-0.01685, -0.099, 0.06, 0, 0, 0]
+    c_4: [ 0.14327, -0.099, 0,    0, 0, 0]
+    c_5: [ 0.14327,  0.099, 0,    0, 0, 0]
+    c_6: [ 0.14327,  0.099, 0.06, 0, 0, 0]
+    c_7: [ 0.14327, -0.099, 0.06, 0, 0, 0]
+    c_8: [ 0.06321,  0,     0.03, 0, 0, 0]
