--- a/mt/launch/config.yaml
+++ b/mt/launch/config.yaml
@@ -10,11 +10,11 @@
 camera_width: 1280
 camera_height: 720
 outputImage_size: 400
-object_name: 'carrier_empty'
+object_name: 'holder_empty'
 
-path_to_obj_stl: '/home/mluser/catkin_ws/src/mt/cad/product.stl'
+path_to_obj_stl: '/home/mluser/catkin_ws/src/mt/cad/holder.stl' #product.stl'
 # path_to_obj_stl: '/home/johannes/catkin_ws/src/mt/cad/product.stl'
-path_to_store: '/home/mluser/catkin_ws/src/data/single/carrier_empty/'
+path_to_store: '/home/mluser/catkin_ws/src/data/holder/'
 #path_to_store: '/home/johannes/catkin_ws/src/data/'
 
 print_debug: false
