Detector returns belief map. Config has parameter vor belief_map_visualisation. Eval_dope.py visualizes and stores belief-maps

--- a/dope/config/config_quantitative.yaml
+++ b/dope/config/config_quantitative.yaml
@@ -1,6 +1,9 @@
 #path_to_images: "/home/mluser/catkin_ws/src/data/single/carrier_empty/testOnTable"
 path_to_images: "/home/mluser/Schreibtisch/dataset_test_small/"  # / at end!
 
+store_belief_maps: True
+show_belief_maps: False
+
 # Cuboid dimension in cm x,y,z
 dimensions: {
     "cracker": [16.403600692749023,21.343700408935547,7.179999828338623],
