--- a/dope/config/config_quantitative.yaml
+++ b/dope/config/config_quantitative.yaml
@@ -1,8 +1,9 @@
 #path_to_images: "/home/mluser/catkin_ws/src/data/single/carrier_empty/testOnTable"
-path_to_images: "/home/mluser/Schreibtisch/dataset_test_small/"  # / at end!
+path_to_images: "/home/mluser/Schreibtisch/data/dataset_test_real/"  # / at end!
 
 store_belief_maps: True
 show_belief_maps: False
+store_images: False
 
 # Cuboid dimension in cm x,y,z
 dimensions: {
