--- a/dope/config/config_quantitative.yaml
+++ b/dope/config/config_quantitative.yaml
@@ -1,4 +1,3 @@
-#path_to_images: "/home/mluser/catkin_ws/src/data/single/carrier_empty/testOnTable"
 path_to_images: "/home/mluser/Schreibtisch/data/dataset_test_real/"  # / at end!
 
 store_belief_maps: True
@@ -7,23 +6,17 @@ store_images: False
 
 # Cuboid dimension in cm x,y,z
 dimensions: {
-    "cracker": [16.403600692749023,21.343700408935547,7.179999828338623],
-    "gelatin": [8.918299674987793, 7.311500072479248, 2.9983000755310059],
-    "meat": [10.164673805236816,8.3542995452880859,5.7600898742675781],
-    "mustard": [9.6024150848388672,19.130100250244141,5.824894905090332],
-    "soup": [6.7659378051757813,10.185500144958496,6.771425724029541],
-    "sugar": [9.267730712890625,17.625339508056641,4.5134143829345703],
     "carrier_empty": [19.8,9.0,17.7]
 }
 
 draw_colors: {
-    "cracker": [13, 255, 128],  # green
-    "gelatin": [255, 255, 255],  # while
-    "meat": [0, 104, 255],  # blue
-    "mustard": [217,12, 232],  # magenta
-    "soup": [255, 101, 0],  # orange
-    "sugar": [232, 222, 12],  # yellow
-    "carrier_empty": [0, 104, 255],  # blue
+    # [13, 255, 128],  # green
+    # [255, 255, 255], # while
+    # [0, 104, 255],   # blue
+    # [217,12, 232],   # magenta
+    # [255, 101, 0],   # orange
+    # [232, 222, 12],  # yellow
+    "carrier_empty": [0, 104, 255],
 }
 
 # Camera intrinsics
